Filtrado de más de una condición; wildcards en sortBy y groupBy; Collectors toList en writeCSVHeaders